# mith-atomas

./: ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  README.md
.github/workflows/: ci.yml
examples/: CMakeLists.txt
examples/flocking_demo/: CMakeLists.txt  main.cpp
include/mith/behaviour/: action_type.h
include/mith/comms/: beacon_system.h  peer_key_registry.h  state_vector.h  udp_wire.h
include/mith/core/: bounded_queue.h  builtin_components.h  json_writer.h  registry.h  scheduler.h  swarm_context.h  system.h  trace_sink.h  world.h
include/mith/identity/: chacha20.h  identity_rotation.h
include/mith/systems/: fault_monitor_system.h  flocking_system.h  kinematics_system.h  task_alloc_system.h
qa-report/20260614T013112Z/: REPORT.md  demo-2d.jsonl  demo-3d.jsonl
scripts/: run_full_qa.sh
src/comms/: beacon_system.cpp  peer_key_registry.cpp  udp_wire.cpp
src/core/: json_writer.cpp  registry.cpp  scheduler.cpp  trace_sink.cpp  world.cpp
src/identity/: chacha20.cpp  identity_rotation.cpp
src/systems/: discovery_system.cpp  fault_monitor_system.cpp  flocking_system.cpp  kinematics_system.cpp  task_alloc_system.cpp
tests/: CMakeLists.txt
tests/integration/: test_fault_injection_integration.cpp  test_identity_rotation_integration.cpp  test_partition_merge_integration.cpp  test_signed_beacons_integration.cpp  test_swarm_lifecycle_integration.cpp
tests/unit/: test_bounded_queue.cpp  test_builtin_components.cpp  test_chacha20.cpp  test_discovery_system.cpp  test_fault_monitor_system.cpp  test_flocking_system.cpp  test_identity_rotation.cpp  test_identity_stubs.cpp  test_json_writer.cpp  test_kinematics_system.cpp  test_peer_key_registry.cpp  test_registry.cpp  test_scheduler.cpp  test_state_vector.cpp  test_task_alloc_system.cpp  test_trace_sink.cpp  test_udp_wire.cpp  test_world.cpp
tools/visualiser/: visualise.py
